--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -382,7 +382,7 @@ img {
   padding: 20px;
   margin: 15px;
   width: 100%;
-  cursor: pointer;
+  // cursor: pointer;
 }
 .profile-img {
   width: 50px;
