--- a/src/app/product-card/product-card.component.scss
+++ b/src/app/product-card/product-card.component.scss
@@ -18,19 +18,31 @@
   &__info {
     flex-grow: 1;
     padding: 16px 16px 32px;
+    max-height: 221px;
     > header {
       display: flex;
       align-items: center;
       .title {
         flex-grow: 1;
         .product-name {
+          display: -webkit-box;
+          max-width: 400px;
+          -webkit-line-clamp: 1;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
           padding-right: 12px;
           font-size: 1.125rem;
           font-weight: 500;
           text-transform: uppercase;
-          margin-bottom: 4px;
         }
         .product-short-desc {
+          display: -webkit-box;
+          max-width: 400px;
+          -webkit-line-clamp: 4;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+          text-overflow: ellipsis;
           color: #777;
         }
       }
