--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -228,3 +228,45 @@
   background-color: rgba(0, 0, 0, 0.5);
   pointer-events: auto;
 }
+
+.sub-menu,
+.sub-menu__gender {
+  outline: none;
+  transform: translateY(0);
+  padding: 8px 0 8px 24px;
+  margin-bottom: 12px;
+
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+.sub-menu__gender:hover {
+  background-color: rgb(236, 236, 236);
+}
+
+.sub-menu {
+  display: none;
+}
+.sub-menu.show {
+  transition: all ease-out 0.8s;
+  display: block;
+}
+.sub-menu__gender-male {
+  overflow-y: auto;
+  position: absolute;
+  left: 100%;
+  width: 100%;
+  max-height: 350px;
+  background-color: #fff;
+  outline: none;
+  display: none;
+  transform: translateY(-30%);
+  border-left: solid 2px #ccc;
+  cursor: pointer;
+  transition: all ease 0.5s;
+  li:hover {
+    background-color: rgb(236, 236, 236);
+  }
+}
+.sub-menu__gender-male.show {
+  display: block;
+}
