--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,7 +1,7 @@
 <div class="over-lay" (click)="_dialog.showDialogFeedback = false"></div>
 <div class="parent-bg" *ngIf="_dialog.showDialogFeedback">
   <div class="wrapper">
-    <h3>Lorem ipsum dolor sit amet.</h3>
+    <h3>Write your feedback.</h3>
     <form action="#">
       <div class="rating">
         <input type="number" name="rating" hidden />
