--- a/src/app/order-history/order-history.component.html
+++ b/src/app/order-history/order-history.component.html
@@ -34,7 +34,9 @@
               nz-button
               type="submit"
               [nzLoading]="loading"
-              [disabled]="order.status == 'CANCELED'"
+              [disabled]="
+                order.status == 'CANCELED' || order.status == 'RECEIVED'
+              "
               (click)="cancelOrder(order.orderID)"
             >
               Cancel
