--- a/src/app/single-history/single-history.component.html
+++ b/src/app/single-history/single-history.component.html
@@ -21,7 +21,7 @@
           <th>Name</th>
           <th>Quantity</th>
           <th>Price</th>
-          <th *ngIf="statusOrder === 'SUCCESS'">Feedback</th>
+          <th *ngIf="statusOrder === 'RECEIVED'">Feedback</th>
         </tr>
       </thead>
       <tbody>
