--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,29 +12,25 @@
         </p>
         <ul class="list-inline mt-4">
           <li class="list-inline-item">
-            <a href="#" target="_blank" title="twitter"
-              ><i class="fa fa-twitter"></i
-            ></a>
+            <a target="_blank" title="twitter"><i class="fa fa-twitter"></i></a>
           </li>
           <li class="list-inline-item">
-            <a href="#" target="_blank" title="facebook"
+            <a target="_blank" title="facebook"
               ><i class="fa fa-facebook"></i
             ></a>
           </li>
           <li class="list-inline-item">
-            <a href="#" target="_blank" title="instagram"
+            <a target="_blank" title="instagram"
               ><i class="fa fa-instagram"></i
             ></a>
           </li>
           <li class="list-inline-item">
-            <a href="#" target="_blank" title="pinterest"
+            <a target="_blank" title="pinterest"
               ><i class="fa fa-pinterest"></i
             ></a>
           </li>
           <li class="list-inline-item">
-            <a href="#" target="_blank" title="vimeo"
-              ><i class="fa fa-vimeo"></i
-            ></a>
+            <a target="_blank" title="vimeo"><i class="fa fa-vimeo"></i></a>
           </li>
         </ul>
       </div>
@@ -50,9 +46,9 @@
       <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
         <h6 class="text-uppercase font-weight-bold mb-4">Company</h6>
         <ul class="list-unstyled mb-0">
-          <!-- <li class="mb-2"><a href="#" class="text-muted">Wishlist</a></li> -->
+          <!-- <li class="mb-2"><a  class="text-muted">Wishlist</a></li> -->
           <li class="mb-2">
-            <a routerLink="/" class="text-muted">Our Products</a>
+            <a class="text-muted">Our Products</a>
           </li>
         </ul>
       </div>
