--- a/src/app/thank-you/thank-you.component.html
+++ b/src/app/thank-you/thank-you.component.html
@@ -1,15 +1,18 @@
 <div class="content">
   <div class="wrapper-1">
     <div class="wrapper-2">
-      <h1>Thank you !</h1>
-      <p>We're honored that you chose us!</p>
-      <p>Many thanks for choosing our shop and see you soon</p>
-      <button class="go-home" routerLink="/cart">Back to cart</button>
+      <h1>Cảm ơn quý khách</h1>
+      <p>Chúng tôi rất vinh dự vì bạn đã chọn chúng tôi!</p>
+      <p>
+        Blawol shop kính chúc quý khách có nhứng trải nghiệm thật tốt với sản
+        phẩm của chúng tôi
+      </p>
+      <button class="go-home" routerLink="/cart">Trở về giỏ hàng</button>
     </div>
     <div class="footer-like">
       <p>
-        or back to continue to shopping
-        <a href="#">Click here to back continue shopping</a>
+        hoặc tiếp tục mua sắm bằng cách
+        <a href="#">nhấn vào đây</a>
       </p>
     </div>
   </div>
