--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="product-card__cta">
     <button nz-button [disabled]="quantity === 0" (click)="addToCart()">
-      {{ quantity === 0 ? "Out of stock" : "Add to cart" }}
+      {{ quantity === 0 ? "Sản phẩm đã hết" : "Thêm vào giỏ hàng" }}
     </button>
   </div>
 </div>
